--- a/app/src/main/res/layout/item_country.xml
+++ b/app/src/main/res/layout/item_country.xml
@@ -2,6 +2,11 @@
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     >
+    <data>
+        <variable
+            name="country"
+            type="com.example.ulkeuyqulamasi.model.Country" />
+    </data>
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="150dp"
@@ -31,7 +36,7 @@
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:text="Name">
+            android:text="@{country.countryName}">
         </TextView>
         <TextView
             android:id="@+id/region"
@@ -40,7 +45,7 @@
             android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Region">
+            android:text="@{country.countryRegion}">
         </TextView>
 
     </LinearLayout>
