--- a/app/src/main/res/layout/item_country.xml
+++ b/app/src/main/res/layout/item_country.xml
@@ -6,12 +6,25 @@
         <variable
             name="country"
             type="com.example.ulkeuyqulamasi.model.Country" />
+        <variable
+            name="listener"
+            type="com.example.ulkeuyqulamasi.adapter.CountryClickListener" />
     </data>
+
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="150dp"
+    android:onClick="@{listener::onCountryClicked}"
     android:orientation="horizontal"
     >
+    <TextView
+        android:id="@+id/countryUuidText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:text="@{String.valueOf(country.uuid)}">
+
+    </TextView>
 
     <ImageView
         android:id="@+id/imageView"
@@ -19,7 +32,8 @@
         android:layout_height="match_parent"
         android:layout_weight="2"
         android:padding="3dp"
-        android:src="@drawable/ic_launcher_foreground"
+        android:downloadUrl="@{country.imageUrl}"
+
         >
     </ImageView>
     <LinearLayout
@@ -28,6 +42,7 @@
         android:orientation="vertical"
         android:layout_weight="3"
         android:gravity="center_vertical">
+
 
         <TextView
             android:id="@+id/name"
