--- a/app/src/main/res/layout/fragment_country.xml
+++ b/app/src/main/res/layout/fragment_country.xml
@@ -2,6 +2,12 @@
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <data>
+      <variable
+          name="selectedCountry"
+          type="com.example.ulkeuyqulamasi.model.Country" />
+
+    </data>
 <RelativeLayout
     android:id="@+id/too"
     android:layout_width="match_parent"
@@ -12,7 +18,7 @@
         android:id="@+id/countryImage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@mipmap/ic_launcher_round"
+        android:downloadUrl="@{selectedCountry.imageUrl}"
         android:paddingTop="10dp"
         android:layout_alignParentTop="true"
         android:scaleType="fitCenter"
@@ -27,7 +33,7 @@
         android:layout_below="@id/countryImage"
         android:layout_centerHorizontal="true"
         android:layout_margin="5dp"
-        android:text="Country Name"
+        android:text="@{selectedCountry.countryName}"
         android:textSize="20sp"
         android:textStyle="bold">
 
@@ -40,7 +46,7 @@
         android:layout_below="@id/countryName"
         android:layout_centerHorizontal="true"
         android:layout_margin="7dp"
-        android:text="Country Capital"
+        android:text="@{selectedCountry.countryCapital}"
         android:textSize="16sp"
         >
 
@@ -53,7 +59,7 @@
         android:layout_below="@id/countryCapital"
         android:layout_centerHorizontal="true"
         android:layout_margin="7dp"
-        android:text="Country Region"
+        android:text="@{selectedCountry.countryRegion}"
         android:textSize="16sp"
       >
 
@@ -65,7 +71,7 @@
         android:layout_below="@id/countryRegion"
         android:layout_centerHorizontal="true"
         android:layout_margin="7dp"
-        android:text="Country Currency"
+        android:text="@{selectedCountry.countryCurrency}"
         android:textSize="16sp"
         >
 
@@ -77,7 +83,7 @@
         android:layout_below="@id/countryCurrency"
         android:layout_centerHorizontal="true"
         android:layout_margin="7dp"
-        android:text="Country Language"
+        android:text="@{selectedCountry.countryLanguage}"
         android:textSize="16sp"
         >
 
